# arch-news-hook

./: Cargo.toml
db/sync/: core.db
src/: main.rs
