[package]
name = "arch-news-hook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alpm = "3.0.5"
alpm-utils = "3.0.2"
anyhow = "1.0.86"
chrono = "0.4.38"
reqwest = "0.12.4"
rss = "2.0.8"
scraper = "0.19.0"
tempfile = "3.10.1"
tokio = { version = "1", features = ["full"] }
versions = "6.2.0"
